<resources>
    <!--Intro Screen -->
    <string name="app_name">IfoodClone</string>
    <string name="intro_text_title">Big Food</string>
    <string name="food_delevery_app">Food Delivery App</string>
    <string name="welcome_user_name_text">Hi,Vitor</string>
    <string name="order_amp_eat"><![CDATA[Order & eat]]></string>
    <string name="find_your_food_hint">Find Your Food</string>
    <string name="popular">Popular</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="jun_12_june_17">Jun 12 - June 17</string>
    <string name="order_now">Order Now</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="your_card_is_empty">Your Card Is Empty</string>
    <string name="checkout">CheckOut</string>
    <string name="total">Total:</string>
    <string name="_0">$%1d</string>
    <string name="tax">Tax:</string>
    <string name="delivery_services">Delivery Services:</string>
    <string name="items_total">Items Total:</string>
    <string name="my_card">My Card</string>
    <string name="title">Title</string>
    <string name="cifrao">$</string>
    <string name="_1">1</string>
    <string name="description">Description</string>
    <string name="add_to_card">Add to Card</string>
</resources>